RE-126 - Fixed notification counter too large

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/Notification/NotificationBell.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/Notification/NotificationBell.css
@@ -14,4 +14,7 @@
 }
 .notification::after {
   background-color: #4DD3EF;
+  top: -3px;
+  right: -11px;
+  padding: 3px 6px;
 }
